--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -32,3 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "enigmatic-escarpment-69455" #Must be unique in Heroku
           heroku_email: "meeveritt@gmail.com"
+          healthcheck: "https://[YOUR APP's NAME].herokuapp.com/health"
+          checkstring: "ok"
