--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -39,4 +39,10 @@ jobs:
           healthcheck: "https://enigmatic-escarpment-69455.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.33.0
+        if: ${{ github.event_name == 'push' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
           
