--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -44,5 +44,5 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
+          # DEFAULT_BUMP: patch
           
