--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -41,8 +41,8 @@ jobs:
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
-        # if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # DEFAULT_BUMP: patch
+          DEFAULT_BUMP: patch
           
