--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -2,9 +2,9 @@ name: Deployment pipeline
 
 on:
   push:
-    branches:
-      - master
-      - matt
+    # branches:
+    #   - master
+    #   - matt
   pull_request:
     branches: [master]
     types: [opened,synchronize]
