--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -32,7 +32,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, join('#skip'))}}
+        # if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, join('#skip'))}}
+        if: ${{ contains(github.event.commits.*.message, join('#skip'))}}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "enigmatic-escarpment-69455" #Must be unique in Heroku
@@ -43,7 +44,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
-        if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, join('#skip'))}}
+        # if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, join('#skip'))}}
+        if: ${{ contains(github.event.commits.*.message, join('#skip'))}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
