--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -19,39 +19,39 @@ jobs:
           node-version: '12.x'
       - name: npm install 
         run: npm install  
-      - name: lint
-        run: npm run eslint
+      # - name: lint
+      #   run: npm run eslint
       - name: build
         run: npm run build
-      - name: test
-        run: npm run test
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npx cypress run
-          start: npm run start-prod
-          wait-on: http://localhost:5000
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, '#skip')}}
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "enigmatic-escarpment-69455" #Must be unique in Heroku
-          heroku_email: "meeveritt@gmail.com"
-          healthcheck: "https://enigmatic-escarpment-69455.herokuapp.com/health"
-          checkstring: "ok"
-          rollbackonhealthcheckfailed: true
-      - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
-        if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, '#skip')}}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
+      # - name: test
+      #   run: npm run test
+      # - name: e2e tests
+      #   uses: cypress-io/github-action@v2
+      #   with:
+      #     command: npx cypress run
+      #     start: npm run start-prod
+      #     wait-on: http://localhost:5000
+      # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      #   if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, '#skip')}}
+      #   with:
+      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      #     heroku_app_name: "enigmatic-escarpment-69455" #Must be unique in Heroku
+      #     heroku_email: "meeveritt@gmail.com"
+      #     healthcheck: "https://enigmatic-escarpment-69455.herokuapp.com/health"
+      #     checkstring: "ok"
+      #     rollbackonhealthcheckfailed: true
+      # - uses: actions/checkout@v2
+      # - name: Bump version and push tag
+      #   uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
+      #   if: ${{ github.event_name == 'pull_request' || contains(github.event.commits.*.message, '#skip')}}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     DEFAULT_BUMP: patch
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
         env:
-          SLACK_WEBHOOK_URL: ${{ 'https://hooks.slack.com/services/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' }} # required
+          SLACK_WEBHOOK_URL: ${{ 'hooks.slack.com/services/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' }} # required
         if: always() # Pick up events even if the job fails or is canceled.
           
