--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           # Check the following URLs one by one sequentially
           url: https://enigmatic-escarpment-69455.herokuapp.com/
           # Follow redirects, or just report success on 3xx status codes
-          follow-redirect: no # Optional, defaults to "no"
+          #follow-redirect: no # Optional, defaults to "no"
           # Fail this action after this many failed attempts
           max-attempts: 3 # Optional, defaults to 1
           # Delay between retries
