--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -52,6 +52,6 @@ jobs:
           status: ${{ job.status }}
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
         env:
-          SLACK_WEBHOOK_URL: ${{ 'https://hooks.slack.com/services/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' }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always() # Pick up events even if the job fails or is canceled.
           
